Fortran parsing of intrinsic module dependencies when building a Fortran compiler
Over at flang-compiler/flang
, when building the intrinsic Fortran modules, the dependencies are not configured correctly
because the fortran parser in CMake assumes that the intrinsic Fortran modules are available. Is there an option to turn this off using a preprocessor define? Maybe we can have a preprocessor define that would help in this,
#ifdef __IN_CMAKE_FORTRAN_PARSER
use :: iso_c_binding
#else
use, intrinsic :: iso_c_binding
#endif
See https://github.com/Kitware/CMake/blob/v3.19.0/Source/LexerParser/cmFortranParser.y#L150