Makefiles: Add support for building Fortran intrinsics

Fixes: #21463